<resources>
    <string name="app_name">Lock screen</string>
    <string name="test_device_id">0EA487C1DF73961705C666EB895E7150</string>
    <string name="developer_email">developer_email</string>
    <string name="developer_account_name">developer_name</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_banner">BANNER_AD_ID</string>
    <string name="ad_native">NATIVE_AD_ID</string>
    <string name="ad_interstitial">INSTRITITIAL_AD_ID</string>
    <string name="action_settings">Settings</string>
    <string name="fragment1">FRAGMENT1</string>
    <string name="fragment2">FRAGMENT2</string>
    <string name="Pref_Lockscreen_Title">Lockscreen settings</string>
    <string name="Pref_Passcode_Title">Passcode settings</string>
    <string name="Pref_Lockscreen_Active">Active Lockscreen</string>
    <string name="Pref_Lockscreen_Active_s">Active or Deactive Lockscreen</string>
    <string name="Pref_Lockscreen_Sound">Lockscreen Sound</string>
    <string name="Pref_Lockscreen_Sound_s">Sound when open lockscreen</string>
    <string name="Pref_Lockscreen_Vibration">Lockscreen Vibration</string>
    <string name="Pref_Lockscreen_Vibration_s">Vibrate when wrong pin, wrong pattern and keypad</string>
    <string name="Pref_Lockscreen_Power">Power Saving Mode</string>
    <string name="Pref_Lockscreen_Power_s">Little performance problem but save battery. If screen off lockscreen will stop and screen on lockscreen will start.</string>
    <string name="Pref_Lockscreen_Select_None">Turn off System Lock</string>
    <string name="Pref_Lockscreen_Select_None_s">Select None to prevent double lock</string>
    <string name="Pref_Lockscreen_about_us">About us</string>
    <string name="Pref_Lockscreen_about_us_s">About Lock Screen and developer</string>
    <string name="Pref_Licence">License</string>
    <string name="Pref_Licence_s">License of images and library</string>
    <string name="Pref_FAQ">FAQ</string>
    <string name="Pref_FAQ_s">Frequently asked questions</string>
    <string-array name="settings_push_delay_human_value">
        <item>None</item>
        <item>Passcode</item>
        <item>Pattern</item>
    </string-array>
    <string-array name="settings_push_delay_phone_value">
        <item>None</item>
        <item>Passcode</item>
        <item>Pattern</item>
    </string-array>
    <string-array name="titles1">
        <item>Color</item>
        <item>Style</item>
        <item>Size</item>
    </string-array>
    <string-array name="titles2">
        <item>Text</item>
        <item>Style</item>
        <item>Size</item>
    </string-array>
</resources>