<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/BackgroundBlurLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="#99000000" />

    <RelativeLayout
        android:id="@+id/roul_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4D000000">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tool_bar">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_icon"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/app_description"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_name"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:lines="1"
                android:text="Best lock screen ever."
                android:textColor="#fff"
                android:textSize="15sp" />

        </RelativeLayout>

    </RelativeLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_below="@id/roul_detail">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/about_1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="Android Developer"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <com.google.android.gms.ads.NativeExpressAdView
                android:id="@+id/NativeadView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                ads:adSize="320x150"
                ads:adUnitId="@string/ad_native" />

            <android.support.v7.widget.CardView
                android:id="@+id/CardViewRate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/NativeadView"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                card_view:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/Rlout_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TxtRateTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="24dp"
                            android:text="Love lock screen application ?"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/TxtRateDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/TxtRateTitle"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="12dp"
                            android:text="Do you have a few seconds to rate 5 star this app? We want to hear your opinion. Thanks!"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/Rlout_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Rlout_top"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/btn_feedbak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:padding="8dp"
                            android:text="FEEDBACK"
                            android:textColor="@color/textPreference" />

                        <Button
                            android:id="@+id/btn_ratenow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/btn_feedbak"
                            android:background="?android:attr/selectableItemBackground"
                            android:padding="8dp"
                            android:text="RATE 5 STAR"
                            android:textColor="@color/textPreference" />
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/CardViewShare"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CardViewRate"

                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/TxtShareTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="12dp"
                        android:text="Recommend to friends"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/TxtShareDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/TxtShareTitle"
                        android:layout_marginBottom="16dp"
                        android:text="If you have a minute, can you please help us to spread in the world about lock screen."
                        android:textSize="14sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_banner" />

</RelativeLayout>